# Bags-signal

./: .env.example  .gitignore  API-KEY.md  BAGS-SDK-IMPLEMENTATION.md  BagsSignal_PRD_v1.0.docx  BagsSignal_PRD_v1.0.txt  CRITICAL-ISSUES-REPORT.md  DEPLOY-NOW.md  DEPLOYMENT-READY.md  DEPLOYMENT.md  FIX-COMPLETE-SUMMARY.md  LAUNCHER-FIX-SUMMARY.md  LAUNCHER-GUIDE.md  LAUNCHER-READY.md  OFFICIAL-TOKEN-IMPLEMENTATION.md  QUICK-START.md  README.md  VERCEL-DEPLOY.md  package-lock.json  package.json  render.yaml
backend/: .env.example  .env.production.example  fix-launch-time.js  package.json  render.yaml  update-launch-time.js  write-bags-service.js
backend/python/scorer/: main.py  requirements.txt  scorer.py
backend/src/: index.ts  test-api.ts
backend/src/middleware/: errorHandler.ts  rateLimiter.ts
backend/src/routes/: fee.routes.ts  partner.routes.ts  signal.routes.ts  token.routes.ts
backend/src/services/: bags.service.ts  bags.service.ts.bak  redis-upstash.service.ts  redis.service.ts  worker.service.ts
backend/src/utils/: config.ts  logger.ts
backend/src/websocket/: websocket.manager.ts
frontend/: .env.example  .env.production  build-log.txt  next.config.js  package.json  tailwind.config.ts  tsc-errors.txt  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AppShell.tsx  ErrorBoundary.tsx  (+7 more)
frontend/public/: manifest.json
frontend/types/: vendor.d.ts
program/: Anchor.toml  Cargo.toml
program/programs/bags-signal/src/: claim_router.rs  lib.rs  partner_registry.rs
stitch/stitch/: bags_signal_prd_v1.0.0.html
(+22 files in other folders)
