[package]
name = "bags-signal"
version = "0.1.0"
description = "Bags Signal - ClaimRouter + PartnerRegistry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bags_signal"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
